--- a/styles/title-bar.less
+++ b/styles/title-bar.less
@@ -61,7 +61,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-family: "Segoe UI", @font-family;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
     font-size: 12px;
     font-weight: 400;
     color: @text-color;
